header position fixed from overlap with category button

--- a/assets/style.css
+++ b/assets/style.css
@@ -87,7 +87,7 @@ body {
     padding: 1rem;
     border-bottom: 3px solid #e9ecef;
     position: sticky;
-    top: 140px;
+    top: 180px;
     z-index: 99;
 }
 
